fixed issue related overlapping in Sidebar and two charts implemented

--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,38 @@
-.sidebar{
+
+.sidebar {
     width: 250px;
     min-height: 100vh;
     overflow: auto;
     position: sticky;
-    top: "0";
-}
+    top: 0;
+    --bs-nav-link-padding-y: 0.2rem;
+  }
+  
+ 
+  .nav-link {
+    display: flex;
+    align-items: center;  
+    white-space: nowrap;  
+    padding: 8px 15px; 
+  }
+  
+  
+  .nav-link .me-4 {
+    margin-right: 20px;
+  }
+  
 
 .navcustom{
     width: 100vw;
+}
+
+.maindiv{
+    display: flex;
+    min-height: 100vh;
+}
+
+.customflex{
+    flex-grow: 1;
+    padding: 20px;
+    overflow: auto;
 }
